Fixed text overflow in <article>

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ body, html, #root {
   padding: 0;
   margin: 0;
   text-align: center;
-  font-size: 1.2rem;
 }
 
 #root {
